# cdumay_base64

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  macros.rs
tests/: test_base64_error.rs  test_macros.rs
